# readthedocs_test

./: .gitattributes  MANIFEST.in  README.md  setup.cfg
.github/workflows/: test-build.yaml
doc/: conf.py  hello.rst  index.rst
doc/_autosummary/: example_package.main.rst  example_package.rst  example_package.thecode.AClass.rst  example_package.thecode.rst
src/example_package/: __init__.py  _version.py  main.py  thecode.py
tests/: test_code.py
