[metadata]
name = mypackage
version = 0.0.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    setuptools
    wheel
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mypackage = example_package.main:main

[options.extras_require]
dev =
    pytest
    sphinx